--- a/view/index.html
+++ b/view/index.html
@@ -61,7 +61,6 @@
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
             <a href="#"><h3 class="text-left regular px-4 py-2">Competencias</h3></a>
-            <a href="#"><h3 class="text-left regular px-4 py-2">Proyectos</h3></a>
             <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
@@ -163,6 +162,7 @@
 
             <div class="divider"></div>
         </section>
+
         <section class="row py-5 gy-5">
             <h2 class="text-center p-1 pt-3">Competencias transversales</h2>
             <p class="p-5">
@@ -220,10 +220,7 @@
         <div class="divider_blue"></div>
 
         <div class="p-5 flex_center gap-4">
-            <h2 class="bold">Rivo Molina</h2> 
-            <!-- <button class="hex_app_button" link_scroll_to="section_2">
-                <i data_icon_name="arrow_up"></i>
-            </button> -->
+            <h2 class="bold text-nowrap">Rivo Molina</h2> 
             <button class="hex_app_button" onclick="goToTop()">
                 <i data_icon_name="arrow_up"></i>
             </button>
@@ -232,8 +229,7 @@
         
         <div class="flex-column flex_center gap-3 pb-5">
             <a href="estudios.html"><h3 class="extralight text_hover">Estudios</h3></a>
-            <a href="#"><h3 class="extralight text_hover">Competencias</h3></a>
-            <a href="#"><h3 class="extralight text_hover">Proyectos</h3></a>
+            <a href="competencias.html"><h3 class="extralight text_hover">Competencias</h3></a>
             <a href="#"><h3 class="extralight text_hover">Sobre mí</h3></a>
         </div>
         
