--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,6 +64,35 @@ p{
     letter-spacing: 0.03rem;
     line-height: 1.2;
 }
+ul{
+    font-family: 'Raleway';
+    font-weight: 300;
+    font-size: 1rem;
+    letter-spacing: 0.04rem;
+    line-height: 1.2;
+    
+    >*{
+        padding-block: 0.5rem;
+    }
+}
+.pdf_preview{
+    position: relative;
+}
+.pdf_preview::after {
+    content: '';
+    background-image: url('../img/icons/placeholder_pdf.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 60%;
+}
+li{
+    list-style: square;
+    list-style-position: inside;
+}
 h2{
     font-family: 'Raleway';
     font-weight: 600;
