--- a/view/index.html
+++ b/view/index.html
@@ -60,7 +60,7 @@
 
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
-            <a href="#"><h3 class="text-left regular px-4 py-2">Competencias</h3></a>
+            <a href="competencias.html"><h3 class="text-left regular px-4 py-2">Competencias</h3></a>
             <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
@@ -140,7 +140,7 @@
             </article>
 
             <button class="app_color_button col-6" link_scroll_to="section_2">
-                Lenguajes
+                Competencias
             </button>
 
         </section>
@@ -158,7 +158,7 @@
                 2º DAW 2023-2024
             </button>
             
-            <img class="p-0 overflow_img" src="../public/img/csl_1.jpeg" alt="">
+            <img class="p-0 overflow_img" src="../public/img/index/csl_1.jpeg" alt="">
 
             <div class="divider"></div>
         </section>
