--- a/view/estudios.html
+++ b/view/estudios.html
@@ -162,11 +162,16 @@
                 Échale un ojo al resultado final:
             </p>
         </section>
+        
         <video width="100%" height="auto" controls class="px-2">
             <source src="../public/videos/BilboSKP- Preview.mp4" type="video/mp4">
-            <!-- Añade más etiquetas source para otros formatos de video -->
-            Tu navegador no admite el elemento de video.
+            Este navegador no admite el video.
         </video>
+
+        <section class="row justify-content-center bg_black px-5">
+            <p class="text-center py-2">Video mostrando el proyecto presentado al final del curso</p>
+        </section>
+        
 
     </main>
 
