--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -173,11 +173,9 @@ button{
     letter-spacing: 0.1rem;
     font-family: 'Raleway';
     font-weight: 500;
-    font-size: 1.1rem;
-    gap: 1rem;
 }
 #logo{
-    width: 3rem;
+    width: 1rem;
     aspect-ratio: 1;
     position: relative;
     z-index: 0;
@@ -249,15 +247,13 @@ button{
     border-radius: 0.5rem;
     display: none;
     border-bottom: 0.1rem black solid;
-
 }
 .desplegable_option{
     padding: 0.75rem;
     transition: all 0.2s;
 }
-.siglas{
-    letter-spacing: 0.2rem;
-}
+
+/* app_hover start */
 .app_hover{
     color: whitesmoke;
 }
@@ -265,6 +261,26 @@ button{
     transition: all 0.1s;
     color: var(--main);
 }
+/* app_hover end */
+
+/* hover_gray_bg start */
+.hover_gray_bg{
+    position: relative;
+}
+.hover_gray_bg::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 0.5rem;
+}
+.hover_gray_bg:hover::before{
+    background-color: var(--gray);
+    opacity: 0.2;
+}
+/* hover_gray_bg end */
 
 #competencias{
     font-family: 'Varela Round';
@@ -282,34 +298,6 @@ button{
     width: 100%;
     background-image: linear-gradient(to right bottom, #4576ff, #4f63c579, #4b508f75, #403e5c7d, #2e2e2e);
     z-index: -1;
-}
-
-.text_content_box{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-start;
-}
-.text_content_header{
-    font-weight: 400;
-}
-.text_content_box .app_color_button{
-    align-self: center;
-    margin-block: 1rem;
-}
-
-#introduce_myself .image_container::before{
-    position: absolute;
-    content: '';
-    inset: 20%;
-    background-image: radial-gradient(transparent 50%, black 90%), url(../img/portada.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    animation: entrance 1s ease;
-    border-radius: 50%;
-    aspect-ratio: 1;
-    outline: 0.1rem black solid;
 }
 
 /* app_color_button */
@@ -440,20 +428,37 @@ button{
 /* pantallas mayores de 1921px */ 
 @media screen and (min-width: 1921px) {
     :root {
-        font-size: 36px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+    #logo{
+        width: 4rem;
+    }
+    #nombre{
+        font-size: 1.4rem;
+        gap: 3rem;
+    }
+    .sub_title{
+        text-wrap: nowrap;
     }
 }
 
 @media screen and (max-width: 1920px) {
     :root {
-        font-size: 16px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+    }
+    #logo{
+        width: 2rem;
+    }
+    #nombre{
+        font-size: 1rem;
+        gap: 1rem;
     }
 }
 
 /* xl */
 @media screen and (max-width: 1400px) {
     :root {
-        font-size: 16px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
+        font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
     }
 }
 
@@ -488,31 +493,15 @@ button{
     #desktop_menu{
         display: none;
     }
-    
+    .sub_title{
+        text-wrap: wrap;
+    }
 }
 
 /* xs */
 @media screen and (max-width: 576px){
     :root {
         font-size: 14px; /* Cambia el tamaño de fuente para pantallas más pequeñas */
-    }
-}
-@keyframes entrance {
-    from{
-        transform: translate(100%);
-        opacity: 0;
-    }
-    to{
-        transform: translate(0);
-        opacity: 1;
-    }
-}
-@keyframes rotation {
-    from{
-        rotate: 0deg;
-    }
-    to{
-        rotate: 360deg;
     }
 }
 
